<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.StepContentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/step_content_edit"
            android:layout_width="317dp"
            android:layout_height="54dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="@dimen/common_spacing"
            android:text="@string/add_a_description_of_the_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_image_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/select_an_image"
            app:layout_constraintEnd_toEndOf="@id/step_content_edit"

            app:layout_constraintStart_toStartOf="@id/step_content_edit"
            app:layout_constraintTop_toBottomOf="@id/step_content_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/add_recipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_image_step"
            app:layout_constraintTop_toBottomOf="@+id/step_content_edit"
            app:srcCompat="@drawable/ic_ok_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>