<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FilterFragment">

    <TextView
        android:id="@+id/filterTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:text="@string/filterTextFragment"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/filterTextFragment"
        app:layout_constraintStart_toStartOf="@id/filterTextFragment"
        app:layout_constraintTop_toBottomOf="@id/filterTextFragment"
        tools:itemCount="7"
        tools:listitem="@layout/filter_recipe" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selectFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/add_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ok_24dp" />

    <TextView
        android:id="@+id/emptyFilterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:gravity="center"
        android:text="@string/nothing_was_found_in_this_category_try_to_choose_another_one"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>