<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <TextView
        android:id="@+id/authorName"
        android:layout_width="218dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/author_name"
        app:layout_constraintEnd_toEndOf="@+id/titleRecipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRecipe"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/recipeCategory"
        android:layout_width="221dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/Recipe_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleRecipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleRecipe"
        android:layout_width="223dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/deleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="65dp"
        android:checkable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addFavorites"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:checkable="true"
        app:icon="@android:drawable/btn_star"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>