<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewRecipeFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_author_edit"
        android:layout_width="284dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/edit_recipe_author"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/recipe_title_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipe_title_edit"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title_edit"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_title_edit"
        android:layout_width="284dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/edit_recipe_title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="407dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="BottomAppBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/description_post_save"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ok_24dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/edit_category"
        android:layout_width="284dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:entries="@array/category_names"
        app:layout_constraintEnd_toEndOf="@+id/recipe_author_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipe_author_edit"
        app:layout_constraintTop_toBottomOf="@+id/recipe_author_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>